...
                                                <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="ttv-aJ-OcZ">
                                                    <rect key="frame" x="305" y="7" width="51" height="31"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="AutopilotEnableSwitch" label="Autopilot Enable"/>
                                                    <color key="onTintColor" systemColor="systemBlueColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                    <color key="thumbTintColor" systemColor="systemYellowColor" red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                                                <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.25" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="ZjM-Mc-4vh">
                                                    <rect key="frame" x="101" y="8" width="255" height="30"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="AutopilotSpeedSlider" label="Autopilot Speed"/>
                                                    <color key="minimumTrackTintColor" systemColor="systemBlueColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                    <color key="thumbTintColor" systemColor="systemYellowColor" red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pXu-ug-b8J" customClass="JoyStickView" customModule="BRHJoyStickView">
                                            <rect key="frame" x="70" y="255" width="234" height="234"/>
                                            <accessibility key="accessibilityConfiguration" identifier="RemoteControlJoystick" label="Joystick"/>
                                            <constraints>
                                                <constraint firstAttribute="width" secondItem="pXu-ug-b8J" secondAttribute="height" multiplier="1:1" id="sPR-fk-DKY"/>
...
                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="0.0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IBZ-z3-d1x" userLabel="SpeedVal">
                                                            <rect key="frame" x="21.5" y="0.0" width="56.5" height="45.5"/>
                                                            <accessibility key="accessibilityConfiguration" identifier="SpeedValueLabel"/>
                                                            <fontDescription key="fontDescription" type="system" pointSize="38"/>
                                                            <nil key="textColor"/>
...
                                                            <rect key="frame" x="19.5" y="0.5" width="60" height="59"/>
                                                            <color key="tintColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
                                                            <accessibility key="accessibilityConfiguration" identifier="SteeringImage" label=" "/>
                                                            <constraints>
                                                                <constraint firstAttribute="width" constant="60" id="Xsx-lF-GDK"/>
...
                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="P" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bvY-Gi-4rt" userLabel="TransmissionVal">
                                                            <rect key="frame" x="38.5" y="0.0" width="22.5" height="45.5"/>
                                                            <accessibility key="accessibilityConfiguration" identifier="TransmissionSymbolLabel"/>
                                                            <fontDescription key="fontDescription" type="system" pointSize="38"/>
                                                            <nil key="textColor"/>
...
                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="park" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hox-54-Ty7" userLabel="TransmissionLa
                                                            <rect key="frame" x="10" y="53.5" width="80" height="20.5"/>
                                                            <accessibility key="accessibilityConfiguration" identifier="TransmissionDescriptionLabel"/>
                                                            <constraints>
                                                                <constraint firstAttribute="width" constant="80" id="e8Z-c5-TCa"/>
...
                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Off" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HZI-pA-gLd" userLabel="AutopilotVal">
                                                            <rect key="frame" x="0.0" y="0.0" width="30.5" height="26.5"/>
                                                            <accessibility key="accessibilityConfiguration" identifier="AutopilotStatusLabel"/>
                                                            <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                                            <nil key="textColor"/>
...
